# lwcgl

./: .gitignore  CMakeLists.txt  Makefile  README.md  cubes  funcs.h  input.h  jamesgl.h  math3d.h  mesh.h  sprite.h  spritesheet_xml2csv.py  world.h
dep/: glad.h
dep/glad/: gl.h  gl_debug.h
include/GL/: eglew.h  glxew.h.bak
packfont/: main.cpp
resource/: options.txt  vertex.txt
resource/fonts/: Futura-60 (1).txt  Futura-60 (3).txt  Futura-60.txt  SourceCodePro-Light-56.txt
resource/script/: ball_game.tack  bullet.tack  main.tack  planet.tack  space_background.tack  space_game.tack  spaceship.tack
resource/shaders/: cubeps.glsl  cubevs.glsl  fontps.glsl  meshps.glsl  spriteps.glsl  spritevs.glsl
shaders/: instanceps.glsl  instancevs.glsl  meshps.glsl  meshvs.glsl  planetvs.glsl  skyps.glsl  skyvs.glsl  spriteps.glsl  spritevs.glsl
src/: collision.h  config.h  cubegame.h  definitions.h  game.cpp  game.h  gamestate.h  main.cpp  math3d.h  tge.h
src/graphics/: buffer.h  camera.h  mesh.h  shader.h  sprite.h  surface.h  texture.h
src/internal/: gl_helpers.cpp  gl_helpers.h  glad_wrapper.h  impl.cpp
